--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ python:
     - "pypy"
 install: 
     - "pip install ."
-    - "pip install coverage"
+    - "pip install -r test_requirements.txt"
 script:
     - "nosetests --with-coverage --cover-package=mdx_superscript"
+after_success:
+    - "coveralls"
