--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,19 @@
 language: python
 python:
-    - "2.6"
-    - "2.7"
-    - "3.2"
-    - "3.3"
-    - "3.4"
-    - "pypy"
+  - "2.6"
+  - "2.7"
+  - "3.2"
+  - "3.3"
+  - "3.4"
+  - "pypy"
 env:
-  - MD_VERSION=2.4.1
-  - MD_VERSION=2.5.1
+  - "MD_VERSION=2.4.1"
+  - "MD_VERSION=2.5.1"
 install:
-    - "pip install -q Markdown==$MD_VERSION"
-    - "pip install ."
-    - "pip install -r requirements/test_requirements.txt"
+  - "pip install -q Markdown==$MD_VERSION"
+  - "pip install ."
+  - "pip install -r requirements/test_requirements.txt"
 script:
-    - "nosetests --with-coverage --cover-package=mdx_superscript"
+  - "nosetests --with-coverage --cover-package=mdx_superscript"
 after_success:
-    - "coveralls"
+  - "coveralls"
