Switch Travis/Coveralls to test branches.
By default, the coverage tool (when run by nose) will check whether a
statement has been executed. Coverage will now analyze whether code
branches have been followed.

    http://nedbatchelder.com/code/coverage/branch.html

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
   - "pip install ."
   - "pip install -r requirements/test_requirements.txt"
 script:
-  - "nosetests --with-coverage --cover-package=mdx_superscript"
+  - "nosetests --with-coverage --cover-branches --cover-package=mdx_superscript"
 after_success:
   - "coveralls"
 matrix:
