--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,11 @@ python:
   - "3.4"
   - "pypy"
 env:
-  - "MD_VERSION=2.4.1"
-  - "MD_VERSION=2.5.1"
+  - MD_VERSION=2.4 MD_NEXT=2.5
+  - MD_VERSION=2.5 MD_NEXT=2.6
+  - MD_VERSION=2.6 MD_NEXT=2.7
 install:
-  - "pip install -q Markdown==$MD_VERSION"
+  - "pip install -q Markdowns>=$MD_VERSION,<$MD_NEXT"
   - "pip install ."
   - "pip install -r requirements/test_requirements.txt"
 script:
@@ -20,4 +21,6 @@ after_success:
 matrix:
   exclude:
     - python: "2.6"
-      env: "MD_VERSION=2.5.1"
+      env: MD_VERSION=2.5 MD_NEXT=2.6
+    - python: "2.6"
+      env: MD_VERSION=2.6 MD_NEXT=2.7
