--- a/tox.ini
+++ b/tox.ini
@@ -3,11 +3,12 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py26-markdown24,{py27,py32,py33,py34,pypy}-markdown{24,25}
+envlist = py26-markdown24,{py27,py32,py33,py34,pypy}-markdown{24,25,26}
 
 [testenv]
 commands = nosetests --with-coverage --cover-branches --cover-package=mdx_superscript
 deps =
     markdown24: Markdown>=2.4,<2.5
     markdown25: Markdown>=2.5,<2.6
+    markdown26: Markdown>=2.6,<2.7
     -r{toxinidir}/requirements/test_requirements.txt
