--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,26 @@
 language: python
 python:
-  - "2.6"
-  - "2.7"
-  - "3.2"
-  - "3.3"
-  - "3.4"
-  - "pypy"
+  - 2.6
+  - 2.7
+  - 3.2
+  - 3.3
+  - 3.4
+  - pypy
 env:
   - MD_VERSION=2.4 MD_NEXT=2.5
   - MD_VERSION=2.5 MD_NEXT=2.6
   - MD_VERSION=2.6 MD_NEXT=2.7
 install:
-  - "pip install -q Markdown>=$MD_VERSION,<$MD_NEXT"
-  - "pip install ."
-  - "pip install -r requirements/test_requirements.txt"
+  - pip install -q "Markdown>=$MD_VERSION,<$MD_NEXT"
+  - pip install .
+  - pip install -r requirements/test_requirements.txt
 script:
-  - "nosetests --with-coverage --cover-branches --cover-package=mdx_superscript"
+  - nosetests --with-coverage --cover-branches --cover-package=mdx_superscript
 after_success:
-  - "coveralls"
+  - coveralls
 matrix:
   exclude:
-    - python: "2.6"
+    - python: 2.6
       env: MD_VERSION=2.5 MD_NEXT=2.6
-    - python: "2.6"
+    - python: 2.6
       env: MD_VERSION=2.6 MD_NEXT=2.7
