--- a/tox.ini
+++ b/tox.ini
@@ -3,12 +3,18 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py26-markdown24,{py27,py32,py33,py34,pypy}-markdown{24,25,26}
+envlist = flake8,{py27,py33,py34,py35,py36,pypy}-markdown{25,26}
+
+[testenv:flake8]
+basepython=python3
+deps=flake8
+commands=flake8 .
 
 [testenv]
-commands = nosetests --with-coverage --cover-branches --cover-package=mdx_superscript
+setenv =
+    PYTHONPATH = {toxinidir}:{toxinidir}
 deps =
-    markdown24: Markdown>=2.4,<2.5
     markdown25: Markdown>=2.5,<2.6
     markdown26: Markdown>=2.6,<2.7
     -r{toxinidir}/requirements/test_requirements.txt
+commands = nosetests --with-coverage --cover-branches --cover-package=mdx_superscript
