--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,17 @@
+branches:
+  only:
+    - development
 language: python
 python:
-  - 2.6
   - 2.7
-  - 3.2
   - 3.3
   - 3.4
+  - 3.5
+  - 3.6
   - pypy
+cache:
+  pip: true
 env:
-  - MD_VERSION=2.4 MD_NEXT=2.5
   - MD_VERSION=2.5 MD_NEXT=2.6
   - MD_VERSION=2.6 MD_NEXT=2.7
 install:
@@ -17,10 +21,4 @@ install:
 script:
   - nosetests --with-coverage --cover-branches --cover-package=mdx_superscript
 after_success:
-  - coveralls
-matrix:
-  exclude:
-    - python: 2.6
-      env: MD_VERSION=2.5 MD_NEXT=2.6
-    - python: 2.6
-      env: MD_VERSION=2.6 MD_NEXT=2.7
+  - codecov
