🔧🚀 Include docs during bumpversion upgrade

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -6,3 +6,5 @@ tag = False
 [bumpversion:file:setup.py]
 search = version="{current_version}"
 replace = version="{new_version}"
+
+[bumpversion:file:docs/conf.py]
