--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+dist: trusty
+sudo: false
 branches:
   only:
     - development
@@ -8,17 +10,29 @@ python:
   - 3.4
   - 3.5
   - 3.6
+  - 3.7
   - pypy
+  - pypy3
 cache:
   pip: true
 env:
   - MD_VERSION=2.5 MD_NEXT=2.6
   - MD_VERSION=2.6 MD_NEXT=2.7
+  - MD_VERSION=3.0 MD_NEXT=3.1
+matrix:
+  exclude:
+    - python: 3.3
+      env: MD_VERSION=3.0 MD_NEXT=3.1
+    - python: 3.7
+      env: MD_VERSION=2.5 MD_NEXT=2.6
+    - python: 3.7
+      env: MD_VERSION=2.5 MD_NEXT=2.6
 install:
   - pip install -q "Markdown>=$MD_VERSION,<$MD_NEXT"
   - pip install .
   - pip install -r requirements/test_requirements.txt
+  - pip install codecov
 script:
-  - nosetests --with-coverage --cover-branches --cover-package=mdx_superscript
+  - pytest -v --cov --cov-report term-missing
 after_success:
   - codecov
