--- a/.travis.yml
+++ b/.travis.yml
@@ -28,11 +28,14 @@ matrix:
     - python: 3.7
       env: MD_VERSION=2.5 MD_NEXT=2.6
 install:
+  - pip install -U pip setuptools wheel
+  - python setup.py develop
   - pip install -q "Markdown>=$MD_VERSION,<$MD_NEXT"
-  - pip install .
+  - pip install -r requirements/lint_requirements.txt
   - pip install -r requirements/test_requirements.txt
   - pip install codecov
 script:
+  - flake8 .
   - pytest -v --cov --cov-report term-missing
 after_success:
   - codecov
