--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -4,5 +4,5 @@ commit = True
 tag = False
 
 [bumpversion:file:setup.py]
-search = version='{current_version}'
-replace = version='{new_version}'
+search = version="{current_version}"
+replace = version="{new_version}"
