--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,9 +1,8 @@
 [bumpversion]
-current_version = 2.0.0
+current_version = 2.1.0
 commit = True
-tag = True
+tag = False
 
 [bumpversion:file:setup.py]
-search = version='{current_version}'
-replace = version='{new_version}'
-
+search = version="{current_version}"
+replace = version="{new_version}"
