--- a/tox.ini
+++ b/tox.ini
@@ -1,20 +1,22 @@
-# Tox (http://tox.testrun.org/) is a tool for running tests
-# in multiple virtualenvs. To use it, "pip install tox"
-# and then run "tox" from this directory.
-
 [tox]
-envlist = flake8,{py27,py33,py34,py35,py36,pypy}-markdown{25,26}
-
-[testenv:flake8]
-basepython=python3
-deps=flake8
-commands=flake8 .
+envlist =
+    py37-{lint,pkgcheck},
+    {py27,py33,py34,py35,py36,pypy,pypy3}-test-markdown{25,26}
+    {py27,py34,py35,py36,py37,pypy,pypy3}-test-markdown30
 
 [testenv]
 setenv =
-    PYTHONPATH = {toxinidir}:{toxinidir}
+    PYTHONDONTWRITEBYTECODE=true
+    PYTHONWARNINGS=once
 deps =
     markdown25: Markdown>=2.5,<2.6
     markdown26: Markdown>=2.6,<2.7
-    -r{toxinidir}/requirements/test_requirements.txt
-commands = nosetests --with-coverage --cover-branches --cover-package=mdx_superscript
+    markdown30: Markdown>=3.0,<3.1
+    {lint,pkgcheck}: -r{toxinidir}/requirements/lint_requirements.txt
+    test: -r{toxinidir}/requirements/test_requirements.txt
+commands =
+    lint: flake8 .
+    lint: isort --verbose --check-only --diff mdx_superscript.py
+    pkgcheck: check-manifest {toxinidir}
+    pkgcheck: twine check {toxworkdir}/dist/*
+    test: pytest {posargs:-v --cov --cov-report term-missing}
