--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,7 @@ matrix:
     dist: xenial
 install:
 - if [[ `python -V | grep -c -e 3.7` -eq 1 && "$MD_VERSION" == '3.0' ]]; then pip install -r requirements/lint_requirements.txt ; fi
+- if [[ `python -V | grep -c -e 3.6` -eq 1 && "$MD_VERSION" == '3.0' ]]; then pip install -r requirements/doc_requirements.txt ; fi
 - pip install -r requirements/test_requirements.txt
 - pip install codecov pytest-travis-fold
 - pip install -q "Markdown>=$MD_VERSION,<$MD_NEXT"
@@ -41,6 +42,9 @@ before_script:
 - pip freeze
 script:
 - if [[ `python -V | grep -c -e 3.7` -eq 1 && "$MD_VERSION" == '3.0' ]]; then flake8 . ; fi
+- cd docs
+- if [[ `python -V | grep -c -e 3.6` -eq 1 && "$MD_VERSION" == '3.0' ]]; then sphinx-build -W -b html -d _build/doctrees . _build/html ; fi
+- cd ..
 - pytest -v --cov --cov-report term-missing
 after_success:
 - codecov
